--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/front",
+            "outputPath": "dist/front_saurons_ring",
             "baseHref": "/",
             "deployUrl": "/",
             "index": "src/index.html",
